--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ downloader = "0.2.6"
 file-matcher = "0.6.0"
 pkg-config = "0.3"
 to_absolute = "0.1"
+zip = "0.5"
+zip-extensions = "0.6"
 
 [profile.test]
 opt-level = 3
