--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,19 +10,24 @@ path = "src/lib.rs"
 [dependencies]
 fs_extra = "1.2"
 rustc_version = "0.2"
-url = "2.2.2"
 which = "4.1.0"
 user-error = "1.2.8"
 cmake = { git = "https://github.com/syrel/cmake-rs", rev = "cce9d58d87bd5dd95afb9183fdbbf4cb5d4b2255" }
-tar = "0.4"
-flate2 = "1.0"
-xz2 = "0.1"
-downloader = "0.2.6"
 file-matcher = "0.6.0"
 pkg-config = "0.3"
 to_absolute = "0.1"
-zip = "0.5"
-zip-extensions = "0.6"
+downloader = { version = "0.2.6", optional = true }
+url = { version = "2.2.2", optional = true }
+tar = { version = "0.4", optional = true }
+flate2 = { version = "1.0", optional = true }
+xz2 = { version = "0.1", optional = true }
+zip = { version = "0.5", optional = true }
+zip-extensions = { version = "0.6", optional = true }
+
+[features]
+git-location = ["url", "downloader"]
+zip-location = ["zip", "zip-extensions", "url", "downloader"]
+tar-location = ["tar", "flate2", "xz2", "url", "downloader"]
 
 [profile.test]
 opt-level = 3
