--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ fs_extra = "1.2"
 rustc_version = "0.2"
 which = "4.1.0"
 user-error = "1.2.8"
-cmake = { git = "https://github.com/syrel/cmake-rs", rev = "cce9d58d87bd5dd95afb9183fdbbf4cb5d4b2255" }
 file-matcher = "0.6.0"
-pkg-config = "0.3"
 to_absolute = "0.1"
+cmake = { git = "https://github.com/syrel/cmake-rs", rev = "cce9d58d87bd5dd95afb9183fdbbf4cb5d4b2255", optional = true }
+pkg-config = { version = "0.3", optional = true }
 downloader = { version = "0.2.6", optional = true }
 url = { version = "2.2.2", optional = true }
 tar = { version = "0.4", optional = true }
@@ -25,6 +25,7 @@ zip = { version = "0.5", optional = true }
 zip-extensions = { version = "0.6", optional = true }
 
 [features]
+cmake-library = [ "cmake", "pkg-config" ]
 git-location = ["url", "downloader"]
 zip-location = ["zip", "zip-extensions", "url", "downloader"]
 tar-location = ["tar", "flate2", "xz2", "url", "downloader"]
