--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shared-library-builder"
-version = "0.3.1"
+version = "0.3.8"
 authors = ["feenk gmbh <contact@feenk.com>"]
 edition = "2021"
 
@@ -24,6 +24,7 @@ xz2 = { version = "0.1", optional = true }
 zip = { version = "0.5", optional = true }
 zip-extensions = { version = "0.6", optional = true }
 serde = { version = "1.0", features = ["derive"] }
+strum = { version = "0.24", features = ["derive"] }
 typetag = "0.1"
 
 [dev-dependencies]
