use ndk_build to configure android path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ file-matcher = "0.7"
 to_absolute = "0.1"
 clap = {version = "3.2", features = [ "derive", "color" ] }
 cmake = { git = "https://github.com/syrel/cmake-rs", rev = "671eb012cb16640f14aaeb75a80e469226e12f1d", optional = true }
+ndk-build = { version = "0.9", optional = true }
 pkg-config = { version = "0.3", optional = true }
 downloader = { version = "0.2.6", optional = true }
 url = { version = "2.2.2", optional = true }
@@ -32,7 +33,7 @@ typetag = "0.1"
 serde_json = "1.0"
 
 [features]
-cmake-library = [ "cmake", "pkg-config" ]
+cmake-library = [ "cmake", "pkg-config", "ndk-build" ]
 git-location = ["url"]
 zip-location = ["zip", "zip-extensions", "url", "downloader"]
 tar-location = ["tar", "flate2", "xz2", "url", "downloader"]
