--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ zip-extensions = { version = "0.8", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 strum = { version = "0.24", features = ["derive"] }
 typetag = "0.2"
+toml = "0.8"
+glob = "0.3"
 
 [dev-dependencies]
 serde_json = "1.0"
